tests/negative/scope/class-extends-interface-with-too-few-type-parameters/test.smol
package testing;

class Test {

}

interface I[#A, #B] {}

class C is I[Boolean] {}
